# ICT-OOP-y24

ict-homework-1/labs_src/: CMakeLists.txt
ict-homework-1/labs_src/lab1/: ClosedPoly.cpp  ClosedPoly.h  Point.cpp  Point.h  Poly.cpp  Poly.h  Polygon.cpp  Polygon.h  RegularPolygon.cpp  RegularPolygon.h  Trapezoid.cpp  Trapezoid.h  Triangle.cpp  Triangle.h  main.cpp
ict-homework-1/labs_tests/: lab1_tests.cpp
ict-homework-3/: .gitignore  CMakeLists.txt
ict-homework-3/Zipios/: CMakeLists.txt
ict-homework-3/Zipios/src/: backbuffer.cpp  backbuffer.hpp  collectioncollection.cpp  deflateoutputstreambuf.cpp  deflateoutputstreambuf.hpp  directorycollection.cpp  directoryentry.cpp  dosdatetime.cpp  filecollection.cpp  fileentry.cpp  filepath.cpp  filterinputstreambuf.cpp  filteroutputstreambuf.cpp  gzipoutputstreambuf.cpp  inflateinputstreambuf.cpp  inflateinputstreambuf.hpp  virtualseeker.cpp  zipcentraldirectoryentry.cpp  zipendofcentraldirectory.cpp  zipfile.cpp  zipinputstream.cpp  zipinputstream.hpp  zipinputstreambuf.cpp  zipinputstreambuf.hpp  zipios_common.cpp  zipios_common.hpp  ziplocalentry.cpp  ziplocalentry.hpp  zipoutputstreambuf.cpp  zipoutputstreambuf.hpp
ict-homework-3/Zipios/tools/: dosdatetime.cpp  zipios.cpp  zipios_example.cpp
ict-homework-3/Zipios/zipios/: collectioncollection.hpp  directorycollection.hpp  directoryentry.hpp  filecollection.hpp  fileentry.hpp  filepath.hpp  virtualseeker.hpp  zipfile.hpp  zipiosexceptions.hpp
ict-homework-3/labs_src/: CMakeLists.txt
ict-homework-3/labs_src/lab3/repository/: FSRepository.cpp  FSRepository.h  IRepository.h  MockRepository.cpp  MockRepository.h
ict-homework-3/labs_src/lab3/restorepoint/: AbstractFSRestorePoint.cpp  AbstractFSRestorePoint.h  AbstractRestorePoint.cpp  AbstractRestorePoint.h  IRestorePoint.h  MockRestorePoint.cpp  MockRestorePoint.h  ZipSingleFileRestorePoint.cpp  ZipSingleFileRestorePoint.h  ZipSplitFileRestorePoint.cpp  ZipSplitFileRestorePoint.h
ict-homework-3/labs_src/lab3/storage/: FileStorage.cpp  FileStorage.h  IStorage.h  MemoryStorage.cpp  MemoryStorage.h
ict-homework-3/labs_src/lab3/util/backupjob/: BackupJob.cpp  BackupJob.h  FileJobObject.cpp  FileJobObject.h  IJobObject.h  JobObject.cpp  JobObject.h  MockJobObject.cpp  MockJobObject.h
ict-homework-3/labs_src/lab3/util/factory/: RepositoryFactory.cpp  RepositoryFactory.h  RestorePointFactory.cpp  RestorePointFactory.h  StorageFactory.cpp  StorageFactory.h
ict-homework-3/labs_src/lab3/util/factory/enums/: RepositoryType.h  RestorePointType.h  StorageType.h
ict-homework-3/labs_tests/: CMakeLists.txt  lab3_tests.cpp
ict-homework-5/: CMakeLists.txt
ict-homework-5/game/: sea-battle.cpp  sea-battle.h
ict-homework-5/players/: CMakeLists.txt  human-player.cpp  human-player.h  simple-ai-player.cpp  smart-ai-player.cpp  smart-ai-player.h  util.h
